--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "babel-core": "^5.8.21",
     "babel-plugin-object-assign": "^1.2.1",
     "babelify": "^6.1.3",
+    "body-parser": "^1.15.0",
     "bootstrap": "^3.3.5",
     "browserify-middleware": "^7.0.0",
     "express": "^4.13.3",
+    "mongoose": "^4.4.7",
     "nunjucks": "^1.3.4",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.1"
