--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^3.3.5",
     "browserify-middleware": "^7.0.0",
     "express": "^4.13.3",
+    "jquery": "^2.2.2",
     "mongoose": "^4.4.7",
     "nunjucks": "^1.3.4",
     "react-dom": "^0.14.7",
