--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "babel-core": "^5.8.21",
     "babel-plugin-object-assign": "^1.2.1",
     "babelify": "^6.1.3",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
     "bootstrap": "^3.3.5",
     "browserify-middleware": "^7.0.0",
     "express": "^4.13.3",
+    "express-session": "^1.13.0",
     "jquery": "^2.2.2",
     "mongoose": "^4.4.7",
     "nunjucks": "^1.3.4",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.1"
   },
