--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^4.4.7",
     "nunjucks": "^1.3.4",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.0",
     "passport-local": "^1.0.0",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.1"
