--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "passport-facebook": "^2.1.0",
     "passport-local": "^1.0.0",
     "react-dom": "^0.14.7",
-    "react-router": "^2.0.1"
+    "react-router": "^2.0.1",
+    "winston": "^2.2.0",
+    "winston-daily-rotate-file": "^1.0.1"
   },
   "scripts": {
     "start": "node server.js",
