--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "passport-local": "^1.0.0",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.1",
+    "socket.io": "^1.4.5",
+    "socket.io-client": "^1.4.5",
     "winston": "^2.2.0",
     "winston-daily-rotate-file": "^1.0.1"
   },
