--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.13.3",
     "express-session": "^1.13.0",
     "jquery": "^2.2.2",
+    "mocha": "^2.4.5",
     "mongoose": "^4.4.7",
     "nunjucks": "^1.3.4",
     "passport": "^0.3.2",
@@ -22,6 +23,7 @@
     "passport-local": "^1.0.0",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.1",
+    "should": "^8.3.1",
     "socket.io": "^1.4.5",
     "socket.io-client": "^1.4.5",
     "winston": "^2.2.0",
